--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,11 @@
 language: cpp
+dist: bionic
 compiler: gcc
-dist: trusty
-
-before_install:
-  # C++14
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update -qq
 
 install: 
-  # C++14
-  - sudo apt-get install -qq g++-6
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
+  - sudo apt update -qq
+  # Boost
+  - sudo apt install -qq libboost-all-dev
   # cppcheck
   - sudo apt-get install -qq cppcheck
 
